--- a/INeedA/Base.lproj/Main.storyboard
+++ b/INeedA/Base.lproj/Main.storyboard
@@ -165,7 +165,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Stars" translatesAutoresizingMaskIntoConstraints="NO" id="wD9-UA-hId" customClass="ra">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Stars" translatesAutoresizingMaskIntoConstraints="NO" id="wD9-UA-hId">
                                 <rect key="frame" x="129" y="232" width="117" height="29"/>
                                 <animations/>
                             </imageView>
